k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: land-calc
  labels:
    app: land-calc
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - land-calc.iokrono.com
      secretName: prod-land-calc-cert-tls
  rules:
  - host: land-calc.iokrono.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: land-calc
            port:
              number: 80
